# projectme

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
source/: CMakeLists.txt
source/editor/: CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  ComboBoxDelegate.cpp  ComboBoxDelegate.h  Connection.cpp  Connection.h  DistanceTransformFelzenszwalb.h  FrameCounter.h  Geometry.h  Highlighter.cpp  Highlighter.h  ImageModule.cpp  ImageModule.h  MainWindow.cpp  MainWindow.h  MapperWidget.cpp  MapperWidget.h  Module.cpp  Module.h  ModuleBase.h  ModuleFactory.cpp  ModuleFactory.h  ModuleManager.h  ModuleManagerWidget.cpp  ModuleManagerWidget.h  ModuleParameterWidget.cpp  ModuleParameterWidget.h  ModuleRenderer.h  ModuleRendererWidget.cpp  ModuleRendererWidget.h  NodeEditorWidget.cpp  NodeEditorWidget.h  Parameter.cpp  Parameter.h  ParticleModule.cpp  ParticleModule.h  ParticleSystem.cpp  ParticleSystem.h  PotentialFromImageModule.cpp  (+45 more)
source/editor/glutils/: GLError.cpp  GLError.h  GLSLProgram.cpp  GLSLProgram.h  GLTexture.cpp  GLTexture.h  RenderToTexture.cpp  RenderToTexture.h
source/editor/projects/: foo.projectme  test.projectme
source/editor/projects/shader/: chladni-potential.glsl  chladni.glsl  default.glsl  muxer-anim.glsl  muxer.glsl  particle_render.fs
source/editor/shader/: box.glsl  particle_advect.fs  particle_advect.vs  particle_render.vs  perlin-potential.glsl  perlin-potential2.glsl  perlin.glsl  potential.glsl  sound-input.glsl
source/editor/temp/: ModuleWidget.h  ModuleWidgetFactory.cpp  ModuleWidgetFactory.h  ParticleModuleWidget.cpp  ParticleModuleWidget.h
